<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/main"
        >

    <Button
        android:id="@+id/history_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="87dp"
        android:minWidth="100dp"
        android:text="@string/history_record" />

    <Button
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/history_record"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/set_plan"
        android:layout_marginBottom="36dp"
        android:text="@string/weather" />

    <Button
        android:id="@+id/set_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weather"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="50dp"
        android:text="@string/set_plan" />

    <Button
        android:id="@+id/start_running"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/set_plan"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="44dp"
        android:minWidth="100dp"
        android:text="@string/start_running" />

</RelativeLayout>
