<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/history_id"
            android:visibility="invisible"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"
            android:id="@+id/history_date"
            android:minHeight="40dp"
            android:textSize="25dp"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/distance"
            android:id="@+id/history_distance"
            android:minHeight="40dp"
            android:textSize="25dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time"
            android:id="@+id/history_time"
            android:minHeight="40dp"
            android:textSize="25dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/energy"
            android:id="@+id/history_energy"
            android:minHeight="40dp"
            android:textSize="25dp"/>

</LinearLayout>